--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,29 @@
 {
-    "name": "thefair/thefairlib",
-    "type": "library",
-    "description": "The PHP library for TheFair",
-    "keywords": ["thefair"],
-    "homepage": "https://github.com/thefair-net/thefairlib",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Zhang Han",
-            "email": "zhanghan@thefair.net.cn"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.2",
-        "predis/predis" : "1.0.3",
-        "illuminate/database" : "<4.2",
-        "nmred/kafka-php": "*"
-    },
-    "require-dev": {
-    },
-    "autoload": {
-        "psr-4": {"TheFairLib\\": ""}
+  "name": "lmz/thefairlib",
+  "type": "library",
+  "description": "The PHP library for TheFair",
+  "keywords": [
+    "thefair"
+  ],
+  "homepage": "https://github.com/liumingzhij26/thefairlib",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "mingzhi",
+      "email": "liumingzhij26@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">5.4.0",
+    "predis/predis": "1.0.3",
+    "illuminate/database": "<4.2",
+    "nmred/kafka-php": "*"
+  },
+  "require-dev": {
+  },
+  "autoload": {
+    "psr-4": {
+      "TheFairLib\\": ""
+    }
+  }
 }
