--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "php-amqplib/php-amqplib": ">=2.8.1",
     "elasticsearch/elasticsearch": "~2.0",
     "aliyuncs/oss-sdk-php": "~2.0",
-    "paquettg/php-html-parser": "^1.7"
+    "paquettg/php-html-parser": "^1.7",
+    "ext-openssl": "*"
   },
   "require-dev": {
   },
